<?xml version="1.0"?>
<package>
  <name>agni_gazebo_attach</name>
  <version>0.1.0</version>
  <description>world plugin to permit links to be attached together (similar to the grasp hack in pr2)</description>


  <maintainer email="gwalck@techfak.uni-bielefeld.de">Guillaume WALCK</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>
</package>
