<package>
  <name>agni_utils</name>
  <version>0.1.0</version>
  <description>Utilities libraries : Tactile calibration, filtering, ...</description>
  <maintainer email="gwalck@techfak.uni-bielefeld.de">Guillaume Walck</maintainer>

  <license>BSD</license>

  <url type="repository">vol/ni/src/git/agniros.git</url>

	<author>Guillaume Walck</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  
	<export>
        <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -lagni_tactile_processing"/>
	</export>

</package>
